# WangAI

./: main.py  pyproject.toml
config/: newsapi_source.py
data/btc_usd_price/: 2014-09-17--2025-04-27.csv
data/google_trends/: 2014-09-17--2025-04-27--35f8feb15caf9cb7f0dcb0c7ba0af38f.csv  2014-09-17--2025-04-27.csv
data/prices/: 2014-09-17--2025-04-27--d781d5a34dbebfbe077f17b813f1863c.csv  2014-09-17--2025-04-27-1d['BTC-USD', 'ETH-USD', 'SOL-USD', 'BNB-USD', 'ADA-USD', 'SPY', 'GLD'].csv  2014-09-17--2025-05-02--d781d5a34dbebfbe077f17b813f1863c.csv
notebooks/: test.ipynb
src/data_sources/: abstract.py  btc_usd_price.py  google_trends.py  newsapid_source.py  prices.py
